# hackathon-api

./: .gitignore  README.md  pyproject.toml
app/: README.md  main.py
app/api/: constants.py  deps.py  main.py
app/api/routes/: collection.py  document.py  navigation.py  resource.py
app/core/: config.py  db.py
app/core/build_db/: build_graph.py  build_relational_db.py  build_witness_trees.py  graph_edges.py  init_db.py
app/fetch/: witness_tree.py
app/models/: collection.py  node.py  nodes.py
backend/: .gitignore  README.md  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: collections.py  db.py  entities.py  sql.py  utils.py
backend/app/core/: config.py  db.py
backend/app/core/etl/: models.py  refresh.py  rels.py
backend/app/models/: collections.py  entities.py
backend/app/scripts/: __init__.py  explorer.py  physdesc.sql
backend/app/tests/: conftest.py  test_client.py
backend/app/tests/core/: test_db.py
backend/app/tests/integration/: test_db.py
backend/app/tests/unit/: etl_test.py  test_read_items.py
backend/src/: __main__.py  dependencies.py
backend/src/api/: constants.py  database.py  main.py
backend/src/routers/: entities.py  sql.py
backend/src/sql/: physdesc.sql  physdesc_lang.sql
backend/tests/: test_get_index.py
database/: README.md  config.py
database/src/: build_graph.py  build_relational_db.py  build_witness_trees.py  graph_edges.py  graph_nodes.py  init_db.py
db/: refresh.py
tests/: conftest.py
tests/app/integration/: test_client.py
tests/app/unit/: test_read_items.py
tests/db/: test_refresh.py
